--- a/templates/index.html
+++ b/templates/index.html
@@ -12,13 +12,11 @@
         <div class="top">
             <div class="title-bar">
                 <div class="title-fill" style="width: 60%;">
-                    <div class="title" style="color:#79B5DD;">Tile:</div>
-                    <div type="text" class="title" id="tile" style="padding-left:5px; width: 100%;"></div>
+                    <div class="title" style="color:#79B5DD; width:100%;">ATLAS</div>
                 </div>
                 <div class="title-fill" style="width:40%">
-                    <button class="bar-item" id='view' disabled="true" onclick="tile_editor_open()">VIEW</button>
-                    <button class="bar-item" id='open' disabled="true" onclick="">OPEN</button>
-                    <button class="bar-item" onclick="">EXPORT</button>
+                    <button class="bar-item" id='view' disabled="true" onclick="tile_editor_view()">VIEW</button>
+                    <!--<button class="bar-item" id='open' disabled="true" onclick="">OPEN</button>-->
                 </div>
             </div>
         </div>
@@ -30,7 +28,7 @@
         <!-- Tile Editor Popup-->
         <div class="modal" id="tileEditor">
             <div class="title-fill" style="width:100%; height:30px;">
-                <div class="title" style="width:80%;padding-left:10px;">Tile View</div>
+                <div class="title" style="width:80%; padding-left:10px; color:#79B5DD;">TILE</div>
                 <button class="bar-item" id="tile-edit" onclick="tile_editor_is_editing()">EDIT</button>
                 <button class="bar-item" onclick="tile_editor_zoom(true)">ZIN</button>
                 <button class="bar-item" onclick="tile_editor_zoom(false)">ZOT</button>
