--- a/templates/index.html
+++ b/templates/index.html
@@ -58,19 +58,19 @@
                         </div>
                         <div style="display: flex; flex-direction: row;">
                             <div class="title">Name:</div>
-                            <input type="text" class="title" id="tile-name" style="padding-left:5px; width: 100%;" onchange="tile_editor_name(this.value)"></input>
+                            <input type="text" class="title" id="tile-name" style="padding-left:5px; width: 100%;" onchange="tile_editor_update_name(this.value)"></input>
                         </div>
                         <div style="display: flex; flex-direction: row;">
                             <div class="title">Group:</div>
-                            <input type="text" class="title" id="tile-group" style="padding-left:5px; width: 100%;" onchange="tile_editor_group(this.value)"></input>
+                            <input type="text" class="title" id="tile-group" style="padding-left:5px; width: 100%;" onchange="tile_editor_update_group(this.value)"></input>
                         </div>
                         <div style="display: flex; flex-direction: row;">
                             <div class="title">Column:</div>
-                            <input type="text" class="title" id="tile-location-x" style="padding-left:5px; width: 100%;" onchange="tile_editor_location_col(this.value)"></input>
+                            <input type="text" class="title" id="tile-location-x" style="padding-left:5px; width: 100%;" onchange="tile_editor_update_location_col(this.value)"></input>
                         </div>
                         <div style="display: flex; flex-direction: row;">
                             <div class="title">Row:</div>
-                            <input type="text" class="title" id="tile-location-y" style="padding-left:5px; width: 100%;" onchange="tile_editor_location_row(this.value)"></input>
+                            <input type="text" class="title" id="tile-location-y" style="padding-left:5px; width: 100%;" onchange="tile_editor_update_location_row(this.value)"></input>
                         </div>
                         <div class="title-fill" style="width:100%; height:30px;">
                             <button class="bar-item" id="tile-save" onclick="tile_editor_save()">SAVE</button>
